@@ -1206,6 +1206,7 @@ buildroot-0.1.2 2007-11-06 &lt;spudmonkey@racsa.co.cr&gt
 <pre><ul>
 nuttx-0.3.20 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Initial release of a tiny windowing system for NuttX (not well tested at initial check-in)
+	* Add fixed precision sin() and cos() (not well tested at initial check-in)
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
