@@ -590,4 +590,5 @@
 
 0.3.20 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 	* Initial release of a tiny windowing system for NuttX (not well tested at initial check-in)
+	* Add fixed precision sin() and cos() (not well tested at initial check-in)
 
